# Lumina-AI

./: .coveragerc  .env.dev  .env.prod  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  image_gen.py  implementation_plan.md  lumina_technical_documentation.md  main.py  pyproject.toml  requirements.txt  scraper.py
.github/: PULL_REQUEST_TEMPLATE.md
chats/: 039e56d8-a4c5-4f75-9984-44ede56e38bf.json  08b0d005-b09b-4206-80bb-d8d64fee89cd.json  0cc7f910-a7d4-4357-9b73-9ed8a4d5e83f.json  1be929c2-f6e3-4f7e-97f0-8d676d905c1a.json  1da78f33-09db-4971-9262-903410501562.json  2e01b8c6-4262-458c-a68a-e1c15c5a29f0.json  3d5c0caf-13ad-4267-af64-1b391c717c9a.json  44efa29b-3cca-429f-bdd9-8dc84785eafc.json  45c9d818-ad97-4807-adb6-502bb61dc906.json  6c824397-304e-4b90-ba45-912d15856851.json  8457437d-7bf0-4781-b522-c1e09c56f699.json  8709ddc0-85d3-444d-9204-9b37875afdfd.json  9414ff13-ece1-4502-9689-c4853465ebc3.json  94ce6a9f-85e6-4fc7-857a-e75251393d91.json  a4c93cca-2c49-417a-bf3c-5ae235562713.json  a7a48db5-d8c2-470c-a974-47cc981aea34.json  a7af9278-1f7b-4764-a711-874f8a4b07b6.json  b488254b-f212-4dc6-9c47-8400cd5925b4.json  ba575a39-875b-45a0-8978-910df9088ebe.json  bf2f600a-d50f-41fa-9940-9e76d50b4735.json  dd5c1d7a-62e3-427a-9915-58d638288c86.json  f1e0a7eb-881d-49ff-bc06-0940285bae9a.json  ff0c836f-11d8-49e8-b34e-fa83843d1f43.json
docs/: api.md  api_contracts.md  architecture.md  deployment.md  failover.md  full_documentation.md  index.md  llm_routing_architecture.md  observability.md  routing.md  security.md  (+1 more)
(+68 files in other folders)
