[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
markers = [
    "security: Security and adversarial tests",
    "load: Performance and stress tests",
    "fuzz: Random/fuzzing input tests",
    "property: Property-based (Hypothesis) tests",
]

[tool.coverage.run]
source = ["lumina"]
omit = ["*/tests/*", "*/venv/*"]

[tool.coverage.report]
show_missing = true
fail_under = 65

[tool.coverage.html]
directory = "coverage_html"
